# ztx_calendar_bot

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  stub.pyi
app/: __main__.py  _stub.pyi  config.py  database.py  geo.py  i18n.py  loggers.py  main.py  meta.py  mood.py  orm.py  routers.py  scheduler.py  services.py  telethon_session.py  types.py  utils.py
app/_database/: database.py  models.py  orm.py
app/database/: __init__.py  database.py  models.py  orm.py
app/handlers/: __init__.py  callback_data.py  common.py  custom_emojis.json  emoji.py  eval.py  filters.py  middlewares.py  mood.py  quoter.py  sql.py  start.py  startup_shutdown.py  state.py  test.py  user_config.py  version.py
app/mood/: types.py
app/utils/: __init__.py  regexp.py  utils.py
locales/ru/: ru copy.ftl  ru.ftl
migrations/: env.py
migrations/versions/: 000000000000_initial_rev.py  3ddc37becb83_upd_mood_table_new_days_notes.py  43b2aeed9749_truncate_user_last_message.py  721d074acac5_remove_column_mood_notify_in_users.py  8d80c0ac1544_new_table_mood_config.py  940c5f50a426_new_column_mood_config_notify_current_.py  d83c93cf90ba_new_table_user_last_message.py  ebe749f7a365_new_column_users_gender.py  ff2734781e60_default_created_at_and_on_update.py
