[project]
name = "ztx-calendar-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.23.0",
    "aiogram-i18n>=1.4",
    "aiosqlite==0.21.0",
    "alembic>=1.17.2",
    "apscheduler>=3.11.2",
    "ffmpeg-python>=0.2.0",
    "fluent-runtime>=0.4.0",
    "meval",
    "numpy>=2.4.0",
    "opusfc>=1.5.0",
    "pillow>=12.0.0",
    "platformdirs>=4.5.1",
    "pydantic-settings>=2.12.0",
    "pyogg>=0.6.14a1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-utc>=0.14.0",
]


[dependency-groups]
dev = [
    "ftl-extract>=0.9.0",
]

[tool.uv.sources]
meval = { url = "https://github.com/zeticsce/meval/archive/master.zip" }
