[project]
name = "ztx-calendar-bot"
version = "1.0.0"
description = "Calendar Telegram Bot"
readme = "README.md"
authors = [
    { name = "t.me/zxcdiana" }
]
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.23.0",
    "aiogram-i18n>=1.4",
    "aiosqlite==0.21.0",
    "alembic>=1.17.2",
    "apscheduler>=3.11.2",
    "ffmpeg-python>=0.2.0",
    "fluent-runtime>=0.4.0",
    "meval",
    "pillow>=12.0.0",
    "platformdirs>=4.5.1",
    "pydantic-settings>=2.12.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-utc>=0.14.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "ftl-extract>=0.9.0",
]

[tool.uv.sources]
meval = { url = "https://github.com/zxcdiana/meval/archive/master.zip" }
